--- a/README
+++ b/README
@@ -24,3 +24,39 @@ OtoPerl は perl でリアルタイムサウンド生成を行うプログラム
    - プロトタイプ・モジュールを拡張し組み合わせる事で、自分のサウンド生成プログラムを素早く構成できます。
  * 使い慣れた環境で
    - OtoPerl コードを書く為の専用の開発環境はありません。使い慣れたエディタでソースコードを書いて、 otoperlc クライアントスクリプトでサーバに送信して下さい。
+
+
+[requirement] 
+Mac OS X (10.6 ? or Later ?)
+to compiling... gcc (included in Mac OS X Developer Tools)
+
+【必須環境】
+Mac OS X (10.6 ? or Later ?)
+コンパイルする場合は… gcc (Mac OS X の開発環境に含まれています)
+
+
+[How to build] simply 'make'
+
+【ビルド】 'make' でコンパイルできます
+
+
+[How to use]
+ * './otoperld' to launch OtoPerl server.
+ * './otoperlc otoperl-test.pl' to post Perl script to server.
+ * the server evals posted script, the sound changed as coded in it. try to change otoperl-test.pl with editor and re-post it.
+ * [launch options]
+   - ./otoperld -p 99999      Port number to listen. default is 14609.
+   - ./otoperld startfilename Perl script evaluated when server launched. dafault is 'otoperld-start.pl'.
+   - ./otoperlc -port 99999   Port number to post. default is 14609.
+   - ./otoperlc -host myhost  Host name to post. default is localhost.
+
+【使い方】
+ * './otoperld' で OtoPerl サーバを起動します。
+ * './otoperlc otoperl-test.pl' でPerlスクリプトをサーバに送信します。
+ * サーバは送信されたスクリプトを評価(実行)し、スクリプトの内容に応じて音が変化します。 otoperl-test.pl をエディタで変更して、再度送信してみて下さい。
+ * [起動オプション]
+   - ./otoperld -p 99999      サーバの待ち受けるポート番号を設定します。デフォルトは 14609 です。
+   - ./otoperld startfilename サーバ起動時に評価されるPerlスクリプトを設定します。デフォルトは otoperld-start.pl です。
+   - ./otoperlc -port 99999   クライアントが送信先ポート番号を設定します。デフォルトは 14609 です。
+   - ./otoperlc -host myhost  クライアントの送信先を設定します。デフォルトは localhost です。
+
