--- a/README
+++ b/README
@@ -4,9 +4,17 @@ OtoPerl - live sound programming environment with Perl.
 
 OtoPerl は perl でリアルタイムサウンド生成を行うプログラム環境です。
 
-== Introduction Video ==
 
-http://www.youtube.com/watch?v=-ByATVMO658
+== Resources ==
+(English or japanese resources)
+Introduction Video     http://www.youtube.com/watch?v=-ByATVMO658
+Main webpage           http://drumsoft.com/otoperl/
+github Repository      https://github.com/drumsoft/OtoPerl
+OtoPerl Sound Samples  http://soundcloud.com/otoperl
+
+(Japanese resources)
+YAPC::ASIA 2011 でのOtoPerlセッション http://www.youtube.com/watch?v=jVGwt6v5UXY
+OtoPerlセッション 資料                http://drumsoft.com/otoperl/20111015/
 
 
 == feature ==
@@ -49,68 +57,87 @@ http://www.youtube.com/watch?v=-ByATVMO658
 == ビルド ==
  * 'make' で otoperld をコンパイルできます。
  * リポジトリに含まれる otoperld のバイナリは 64bit intel CPU (x86_64) 向けにコンパイルされています。
-   * x86_64 以外のPerlバイナリにリンクさせる方法がわからず i386 や ppx 向けのコンパイルができませんでした。ヒントご存知の方教えて下さい。
+   * x86_64 以外のPerlバイナリにリンクさせる方法がわからず i386 や ppc 向けのコンパイルができませんでした。ヒントご存知の方教えて下さい。
 
 
 == *** WARNINGS (READ BEFORE RUN) *** ==
- * You must not expose otoperld port to network. It enable someone on your network to execute arbitrary commands on your computer.
- * To avoid the risk, block the port with the Mac OS X firewall by clicking "Deny" on the dialog asks "accept incoming network connections?". it will pop-ups when you launch otoperld first.
- * in default, otoperld use port 14609.
- * If you want run otoperld and otoperlc on separate computers, do it on closed LAN that no untrusted users on.
+ * You must not expose otoperld port to network. It enable someone on the network to execute arbitrary commands on your computer.
+ * in default, otoperld allows access from localhost only. If you set -a, --allow option to make other hosts accessible, be careful.
 
 == *** ご注意 (実行前にお読み下さい) *** ==
  * otoperld のポートをネットワークに解放すると大変危険です。ネットワーク上の誰かが、あなたのコンピュータ上であらゆるコマンドを実行できる状態になります。
- * 危険を回避するため、Mac OS Xのファイアウォールでポートを守りましょう。それには、 otoperld を初めて起動した時に出てくる「受信接続を許可しますか？」と尋ねるダイアログに "拒否" と答えて下さい。
- * otoperld が使用するデフォルトのポート番号は 14609 です。
- * LAN内で otoperld と otoperlc を別々のコンピュータで実行したい場合もあると思います。その場合は、信頼できないユーザがいない、閉じられたLAN内で利用して下さい。
+ * デフォルトでは、 otoperld は localhost からのアクセスのみ受け付けます。 -a, --allow オプションで接続可能なホストを指定する場合、注意して行ってください。
 
 
-== Simple Tutrial ==
+== Simple Tutorial ==
  1. './otoperld' to launch OtoPerl server.
    * sound processing start with test sine wave.
- 2. './otoperlc otoperl-test.pl' to post OtoPerl script to server.
-   * otoperl-test.pl contains perl code that generate sine wave and amp modulate it. the sound generation OtoPerl script running in otoperld is overwritten by it and the generating sound will be amp modulated.
- 3. edit otoperl-test.pl .
+ 2. './otoperlc samples/tutorial.pl' to post OtoPerl script to server.
+   * samples/tutorial.pl contains perl code that generate sine wave and amp modulate it. the sound generation OtoPerl script running in otoperld is overwritten by it and the generating sound will be amp modulated.
+ 3. edit samples/tutorial.pl .
    * example: Uncomment "transform it to square wave" line, it transform sine wave to square wave.
- 4. './otoperlc otoperl-tutorial.pl' to repost it.
+ 4. './otoperlc samples/tutorial.pl' to repost it.
    * the generating sound will be changed as coded in OtoPerl script.
 
 == 簡単なチュートリアル ==
  1. './otoperld' で OtoPerl サーバを起動します。
    * サウンド生成が開始され、サイン波のテストトーンが鳴りだします。
- 2. './otoperlc otoperl-tutorial.pl' で、 OtoPerlスクリプト をサーバに送信します。
-   * otoperl-tutorial.pl にはサイン波にアンプモジュレーションを加えたコードが書かれています。otoperld がサウンド生成する OtoPerlスクリプト がこれによって上書きされ、生成されるサウンドにアンプモジュレーションがかかります。
- 3. otoperl-test.pl をエディタで変更して下さい。
+ 2. './otoperlc samples/tutorial.pl' で、 OtoPerlスクリプト をサーバに送信します。
+   * samples/tutorial.pl にはサイン波にアンプモジュレーションを加えたコードが書かれています。otoperld がサウンド生成する OtoPerlスクリプト がこれによって上書きされ、生成されるサウンドにアンプモジュレーションがかかります。
+ 3. samples/tutorial.pl をエディタで変更して下さい。
    * 例: "transform it to square wave" という行のコメントを外してサイン波を矩形波に変換
- 4. './otoperlc otoperl-tutorial.pl' で、再度 OtoPerlスクリプト をサーバに送信します。
+ 4. './otoperlc samples/tutorial.pl' で、再度 OtoPerlスクリプト をサーバに送信します。
    * エディタの変更に応じて、生成されるサウンドが変わります。
 
 
 == launch options ==
- * ./otoperld -p 99999   Port number to listen. default is 14609.
- * ./otoperld filename   OtoPerl script ran when server launched. dafault is 'otoperld-start.pl'.
- * ./otoperlc -p 99999   Port number to post. default is 14609.
- * ./otoperlc -h myhost  Host name to post. default is localhost.
+otoperld [-v] [-c channels] [-r sample_rate] [-a allowed_addresses] [-p port_number] [filename]
+ -v, --verbose       be verbose.
+ -c, --channel 2     Number of channels OtoPerl generate. default is 2.
+ -r, --rate 48000    Sampling rate of the sound OtoPerl generate. default is 48000.
+ -a, --allow 192.168 Host address pattern allowed to access otoperld. default is 127.0.0.1
+                     ex: 192.168.0.8 (1 host allowed, = 192.168.0.8/255.255.255.255)
+                         192.168.1.0/255.255.252.0 (22 bit netmask)
+                         192.168 (16 bit netmask, = 192.168.0.0/255.255.0.0)
+ -p, --port 99999    Port number to listen. default is 14609.
+ filename            OtoPerl script ran when server launched. dafault is 'otoperld-start.pl'.
+
+otoperlc [-h host_address] [-p port_number] filename, ...
+ -p 99999          Port number to post. default is 14609.
+ -h 192.168.0.1    Host name to post. default is localhost.
 
 == 起動オプション ==
- * ./otoperld -p 99999   サーバの待ち受けるポート番号を設定します。デフォルトは 14609 です。
- * ./otoperld filename   サーバ起動時に実行される OtoPerlスクリプト を設定します。デフォルトは otoperld-start.pl です。
- * ./otoperlc -p 99999   クライアントが送信先ポート番号を設定します。デフォルトは 14609 です。
- * ./otoperlc -h myhost  クライアントの送信先を設定します。デフォルトは localhost です。
+otoperld [-v] [-c チャンネル数] [-r サンプルレート] [-a 接続許可アドレス] [-p ポート番号] [ファイル名]
+ -v, --verbose       verboseモードになる
+ -c, --channel 2     OtoPerlが生成するチャンネル数。デフォルトは 2
+ -r, --rate 48000    OtoPerlが生成するサウンドのサンプリングレート。デフォルトは 48000
+ -a, --allow 192.168 アクセスを許すホストアドレスパターン。デフォルトは 127.0.0.1
+                     例: 192.168.0.8 (アドレスを1つ指定, = 192.168.0.8/255.255.255.255)
+                         192.168.1.0/255.255.252.0 (22ビットのネットマスクを指定)
+                         192.168 (16ビットのネットマスクを指定, = 192.168.0.0/255.255.0.0)
+ -p, --port 99999    サーバの待ち受けるポート番号。デフォルトは 14609
+ filename            サーバ起動時に実行されるOtoPerlスクリプト。デフォルトは otoperld-start.pl
+
+otoperlc [-h host_address] [-p port_number] filename, ...
+ -p 99999          送信先ポート番号。デフォルトは 14609
+ -h 192.168.0.1    送信先ホストアドレス。デフォルトは localhost
 
 
 == file details ==
  * otoperld               Sound generation server program for OtoPerl.
  * otoperld-start.pl      OtoPerl script that otoperld load (in default) when it launched.
  * otoperlc               Client program that post OtoPerl script to otoperld.
- * otoperl-tutorial.pl    OtoPerl script : for tutrial.
- * otoperl-sample.pl      OtoPerl script : a sample.
- * otoperl-silence.pl     OtoPerl script : for silence.
- * otoperl-performance.pl OtoPerl script : for performance testing.
  * OtoPerl                Directory for modules called by otoperlc and OtoPerl script.
    * Client.pm            Modules called by otoperlc.
 
+ * samples
+   * tutorial.pl    OtoPerl script : for tutrial.
+   * sample.pl      OtoPerl script : a sample.
+   * silence.pl     OtoPerl script : for silence.
+   * performance.pl OtoPerl script : for performance testing.
+
  * README                 is you're reading.
+ * HISTORY                version history.
  * LICENSE                GNU GPL 3 (or later)
  * memo.txt               a disorganized memo for developing.
 
@@ -126,14 +153,17 @@ http://www.youtube.com/watch?v=-ByATVMO658
  * otoperld               OtoPerl のサウンド生成サーバ 実行プログラム
  * otoperld-start.pl      otoperld が(デフォルトで)最初にロードする OtoPerlスクリプト
  * otoperlc               otoperld に OtoPerlスクリプト を送信するクライアント
- * otoperl-tutorial.pl    OtoPerlスクリプト: チュートリアル用
- * otoperl-sample.pl      OtoPerlスクリプト: サンプル
- * otoperl-silence.pl     OtoPerlスクリプト: 無音状態
- * otoperl-performance.pl OtoPerlスクリプト: パフォーマンスのテストに使用しているもの
  * OtoPerl                otoperlc や OtoPerlスクリプト から呼ばれるモジュールを保存するフォルダ
    * Client.pm            otoperlc が使用するモジュール
 
+ * samples
+   * tutorial.pl    OtoPerlスクリプト: チュートリアル用
+   * sample.pl      OtoPerlスクリプト: サンプル
+   * silence.pl     OtoPerlスクリプト: 無音状態
+   * performance.pl OtoPerlスクリプト: パフォーマンスのテストに使用しているもの
+
  * README                 is you're reading.
+ * HISTORY                version history.
  * LICENSE                GNU GPL 3 (or later)
  * memo.txt               開発中の雑多なメモ
 
