2015-12-21: Today, I join "Nyanprovisation", the improvisation concert with impromptu live coding on OtoPerl from 19:00 at Nanahari, Hattyobori. Come to see us.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-= OtoPerl READE =
+= OtoPerl README =
 
 OtoPerl - live sound programming environment with Perl.
 
@@ -6,7 +6,7 @@ OtoPerl は perl でリアルタイムサウンド生成を行うプログラム
 
 
 == Resources ==
-(English or japanese resources)
+(English or Japanese resources)
 Introduction Video     http://www.youtube.com/watch?v=-ByATVMO658
 Main webpage           http://drumsoft.com/otoperl/
 Github Repository      https://github.com/drumsoft/OtoPerl
